# biblioteka-numeryczna

./: CMakeLists.txt  LICENSE  README.md
data/: LU_gr1INO.txt  gauss_elimination_gr1IO_A.txt  gauss_elimination_gr1IO_B.txt  gauss_elimination_gr1IO_C.txt  interpolacja_H_gr_01.txt  interpolacja_N_gr_01.txt  interpolacja_gr_1_INO.txt  kwadratury_gr_1INO.txt
examples/: Euler_example.cpp  approximation_example.cpp  differentialequation_example.cpp  gausselimination_example.cpp  integration_example.cpp  lagrange_example.cpp  lumethod_example.cpp  newtoninterpolation_example.cpp  nonlinear_example.cpp  threeintegrations_example.cpp
include/: Euler.h  approximation.h  differentialequation.h  gausselimination.h  integration.h  lagrange.h  lumethod.h  newtoninterpolation.h  nonlinear.h  threeintegrations.h
src/: Euler.cpp  approximation.cpp  differentialequation.cpp  gausselimination.cpp  integration.cpp  lagrange.cpp  lumethod.cpp  newtoninterpolation.cpp  nonlinear.cpp  threeintegrations.cpp
